# dkls-android

./: .gitignore  README.md  settings.gradle.kts
dilithium/: build.gradle.kts
dilithium/src/androidTest/java/com/vultisig/dklsandroid/dilithium/: ExampleInstrumentedTest.kt
dilithium/src/main/cpp/: CMakeLists.txt  buffer_util.c  goSliceUtil.c  interface_file.i  interface_fileJAVA_wrap.c  tssBufferUtil.c  vscore.i  vscoreJAVA_wrap.c
dilithium/src/main/java/com/silencelaboratories/godilithium/: BufferUtilJNI.java  Handle.java  MldsaSecurityLevel.java  go_slice.java  godilithium.java  godilithiumJNI.java  mldsa_error.java  tss_buffer.java  vscore.java  vscoreJNI.java
dilithium/src/test/java/com/vultisig/dklsandroid/dilithium/: ExampleUnitTest.kt
dkls/: build.gradle.kts
dkls/src/androidTest/java/com/vultisig/dklsandroid/: ExampleInstrumentedTest.kt
dkls/src/main/cpp/: CMakeLists.txt  buffer_util.c  go-dkls.h  interface_file.i  interface_fileJAVA_wrap.c
dkls/src/main/cpp/source/com/silencelaboratories/godkls/: Handle.java  SWIGTYPE_p_int32_t.java  SWIGTYPE_p_uint32_t.java  SWIGTYPE_p_uint8_t.java  SWIGTYPE_p_uintptr_t.java  go_slice.java  godkls.java  godklsConstants.java  godklsJNI.java  lib_error.java  tss_buffer.java
dkls/src/main/cpp/source/cpp/: interface_fileJAVA_wrap.c
dkls/src/main/java/com/silencelaboratories/godkls/: BufferUtilJNI.java  Handle.java  SWIGTYPE_p_int.java  go_slice.java  godkls.java  godklsJNI.java  lib_error.java  tss_buffer.java
dkls/src/test/java/com/vultisig/dklsandroid/: ExampleUnitTest.kt
goschnorr/: build.gradle.kts
goschnorr/src/androidTest/java/com/vultisig/goschnorr/: ExampleInstrumentedTest.kt
goschnorr/src/main/cpp/: CMakeLists.txt  buffer_util.c  go-schnorr.h  interface_file.i  interface_fileJAVA_wrap.c
goschnorr/src/main/cpp/source/com/silencelaboratories/goschnorr/: Handle.java  SWIGTYPE_p_int32_t.java  SWIGTYPE_p_uint32_t.java  SWIGTYPE_p_uint8_t.java  SWIGTYPE_p_uintptr_t.java  go_slice.java  goschnorr.java  goschnorrJNI.java  tss_buffer.java
goschnorr/src/main/cpp/source/cpp/: interface_fileJAVA_wrap.c
goschnorr/src/main/java/com/silencelaboratories/goschnorr/: BufferUtilJNI.java  Handle.java  SWIGTYPE_p_int.java  go_slice.java  goschnorr.java  goschnorrConstants.java  goschnorrJNI.java  lib_error.java  schnorr_lib_error.java  tss_buffer.java
goschnorr/src/test/java/com/vultisig/goschnorr/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
